# static-pools

./: .gitignore  CMakeLists.txt  README.md  build-armv2tej.sh  build-mipsel.sh  build-vc6.bat  build-vc6dsw.bat  build-vs2019.bat  build-w2003sdk.bat
include/: allocator.hpp  stddef-config.h
include/apuex/: allocator.hpp  basic-parser.hpp  basic_parser.cpp  basic_parser.hpp  byte_buffer.hpp  modbus.hpp  ring-buffer.hpp  ring_buffer.hpp  stddef-config.h  stddef_config.h  ydt1363.hpp
tests/: allocator-allocate-test.cpp  allocator-binary-tree-test.cpp  basic-parser-test.cpp  byte-buffer-test.cpp  modbus-bytes-test.cpp  modbus-request-test.cpp  modbus-response-test.cpp  ring-buffer-test.cpp  size-test.cpp  stringstream-test.cpp  struct-vector-parse-test.cpp  vector-parse-test.cpp  ydt1363-checksum-test.cpp  ydt1363-frame-test.cpp  ydt1363-hexconv-test.cpp  ydt1363-length-test.cpp  ydt1363-message-test.cpp
